Fix running customization using Java 17+